<TableRow
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/border"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="35dp"
        android:layout_height="match_parent" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border">

        <Button
            android:id="@+id/exist18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_18"
            android:textSize="11sp"
            android:minWidth="40dp"
            android:layout_gravity="center"
            android:minHeight="25dp"
            android:padding="0dp"
            android:textColor="@color/black"
            android:backgroundTint="#DCDCDC"
            android:layout_margin="2dp"
            app:cornerRadius="0dp"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/exist17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_17"
            android:textSize="11sp"
            android:minWidth="40dp"
            android:layout_gravity="center"
            android:minHeight="25dp"
            android:padding="0dp"
            android:textColor="@color/black"
            android:backgroundTint="#DCDCDC"
            android:layout_margin="2dp"
            app:cornerRadius="0dp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border">

        <Button
            android:id="@+id/exist16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_16"
            android:textSize="11sp"
            android:minWidth="40dp"
            android:minHeight="25dp"
            android:layout_gravity="center"
            android:padding="0dp"
            android:textColor="@color/black"
            android:backgroundTint="#DCDCDC"
            android:layout_margin="2dp"
            app:cornerRadius="0dp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/exist15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_15"
            android:textSize="11sp"
            android:minWidth="40dp"
            android:minHeight="25dp"
            android:layout_gravity="center"
            android:padding="0dp"
            android:textColor="@color/black"
            android:backgroundTint="#DCDCDC"
            android:layout_margin="2dp"
            app:cornerRadius="0dp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border">

        <Button
            android:id="@+id/exist14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_14"
            android:textSize="11sp"
            android:minWidth="40dp"
            android:layout_gravity="center"
            android:minHeight="25dp"
            android:padding="0dp"
            android:textColor="@color/black"
            android:backgroundTint="#DCDCDC"
            android:layout_margin="2dp"
            app:cornerRadius="0dp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/exist13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_13"
            android:textSize="11sp"
            android:minWidth="40dp"
            android:minHeight="25dp"
            android:padding="0dp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:backgroundTint="#DCDCDC"
            android:layout_margin="2dp"
            app:cornerRadius="0dp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border">

        <Button
            android:id="@+id/exist12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_12"
            android:textSize="11sp"
            android:minWidth="40dp"
            android:minHeight="25dp"
            android:padding="0dp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:backgroundTint="#DCDCDC"
            android:layout_margin="2dp"
            app:cornerRadius="0dp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/exist11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_11"
            android:textSize="11sp"
            android:minWidth="40dp"
            android:minHeight="25dp"
            android:layout_gravity="center"
            android:padding="0dp"
            android:textColor="@color/black"
            android:backgroundTint="#DCDCDC"
            android:layout_margin="2dp"
            app:cornerRadius="0dp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border">

        <Button
            android:id="@+id/exist21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:backgroundTint="#DCDCDC"
            android:minWidth="40dp"
            android:minHeight="25dp"
            android:padding="0dp"
            android:text="@string/_21"
            android:textColor="@color/black"
            android:textSize="11sp"
            app:cornerRadius="0dp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/exist22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_22"
            android:textSize="11sp"
            android:minWidth="40dp"
            android:layout_gravity="center"
            android:minHeight="25dp"
            android:padding="0dp"
            android:textColor="@color/black"
            android:backgroundTint="#DCDCDC"
            android:layout_margin="2dp"
            app:cornerRadius="0dp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border">

        <Button
            android:id="@+id/exist23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_23"
            android:textSize="11sp"
            android:minWidth="40dp"
            android:minHeight="25dp"
            android:layout_gravity="center"
            android:padding="0dp"
            android:textColor="@color/black"
            android:backgroundTint="#DCDCDC"
            android:layout_margin="2dp"
            app:cornerRadius="0dp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/exist24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_24"
            android:textSize="11sp"
            android:minWidth="40dp"
            android:minHeight="25dp"
            android:layout_gravity="center"
            android:padding="0dp"
            android:textColor="@color/black"
            android:backgroundTint="#DCDCDC"
            android:layout_margin="2dp"
            app:cornerRadius="0dp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border">

        <Button
            android:id="@+id/exist25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_25"
            android:textSize="11sp"
            android:minWidth="40dp"
            android:layout_gravity="center"
            android:minHeight="25dp"
            android:padding="0dp"
            android:textColor="@color/black"
            android:backgroundTint="#DCDCDC"
            android:layout_margin="2dp"
            app:cornerRadius="0dp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/exist26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_26"
            android:textSize="11sp"
            android:minWidth="40dp"
            android:minHeight="25dp"
            android:padding="0dp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:backgroundTint="#DCDCDC"
            android:layout_margin="2dp"
            app:cornerRadius="0dp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border">

        <Button
            android:id="@+id/exist27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_27"
            android:textSize="11sp"
            android:minWidth="40dp"
            android:minHeight="25dp"
            android:padding="0dp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:backgroundTint="#DCDCDC"
            android:layout_margin="2dp"
            app:cornerRadius="0dp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/exist28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_28"
            android:textSize="11sp"
            android:minWidth="40dp"
            android:minHeight="25dp"
            android:layout_gravity="center"
            android:padding="0dp"
            android:textColor="@color/black"
            android:backgroundTint="#DCDCDC"
            android:layout_margin="2dp"
            app:cornerRadius="0dp" />
    </FrameLayout>

</TableRow>