<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/top"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/periodontal_chart"
                android:textSize="40sp"
                android:textStyle="bold"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/fira_sans"/>

            <TextView
                android:id="@+id/textViewData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fira_sans"
                android:text="@string/data"
                android:textSize="22sp" />


            <EditText
                android:id="@+id/editTextDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="6"
                android:inputType="date"
                android:fontFamily="@font/fira_sans"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/textViewFamilia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fira_sans"
                android:text="@string/familia"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/editTextTextFamilia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="8"
                android:inputType="textCapSentences"
                android:fontFamily="@font/fira_sans"
                android:layout_marginEnd="20dp"/>

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fira_sans"
                android:text="@string/name"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/editTextTextName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="7"
                android:inputType="textCapSentences"
                android:fontFamily="@font/fira_sans"
                android:layout_marginEnd="20dp"/>

            <TextView
                android:id="@+id/textViewOtchestvo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fira_sans"
                android:text="@string/otchestvo"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/editTextTextOtchestvo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="8"
                android:inputType="textCapSentences"
                android:fontFamily="@font/fira_sans"
                android:layout_marginEnd="20dp"/>

            <TextView
                android:id="@+id/textViewBirthData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fira_sans"
                android:text="@string/birth_data"
                android:textSize="22sp" />


            <EditText
                android:id="@+id/editTextBirthDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="6"
                android:inputType="date"
                android:fontFamily="@font/fira_sans"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:fontFamily="@font/fira_sans"
                android:text="@string/first_see"
                android:layout_marginEnd="20dp"/>

            <CheckBox
                android:id="@+id/checkBoxControl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:fontFamily="@font/fira_sans"
                android:text="@string/control_see"
                android:layout_marginEnd="20dp"/>

            <TextView
                android:id="@+id/textViewDoctor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fira_sans"
                android:text="@string/doctor"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/editTextTextDoctor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="8"
                android:inputType="text"
                android:fontFamily="@font/fira_sans"
                android:layout_marginEnd="20dp"/>

        </LinearLayout>
</LinearLayout>
